# CLion_SDCC_8051

./: CMakeLists.txt  README.md  SDCC_for_8051.yaml  sdcc_toolchain.cmake
